<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="show_answer">Show Answer</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="click_me">Click Me</string>
</resources>