<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/gradient"
    android:layout_marginBottom="20dp"
    >

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Welcome Ryan"
        android:textSize="24dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/first_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_first_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/add"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text = "@string/plus"
        android:padding = "10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintTop_toBottomOf="@id/first_num"/>

    <Button
        android:id="@+id/sub"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:padding = "10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/add"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        android:text = "@string/minus"
        app:layout_constraintTop_toBottomOf="@id/first_num" />


    <Button
        android:id="@+id/multi"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text = "@string/multiply"
        android:padding = "10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/sub"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintTop_toBottomOf="@id/first_num"/>

    <Button
        android:id="@+id/div"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="10dp"
        android:text="@string/divide"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/multi"
        app:layout_constraintTop_toBottomOf="@id/first_num" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="clear"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add" />

    <EditText
        android:id="@+id/second_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_second_number"
        app:layout_constraintTop_toBottomOf="@id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/answer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text = "@string/show_answer"
        android:padding = "10dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/second_num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="Answer is "
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/answer_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>